// Vitest Snapshot v1

exports[`permission > create permission 1`] = `undefined`;

exports[`permission > delete permission 1`] = `undefined`;

exports[`permission > get permission info 1`] = `
{
  "comment": "a permission for test",
  "id": "test_permission",
}
`;

exports[`permission > modify permission info 1`] = `undefined`;

exports[`permission > modify permission info 2`] = `
{
  "comment": "after modify",
  "id": "test_permission",
}
`;

exports[`permission crud > create permission 1`] = `undefined`;

exports[`permission crud > delete permission 1`] = `undefined`;

exports[`permission crud > get permission info 1`] = `
{
  "comment": "a permission for test",
  "id": "test_permission",
}
`;

exports[`permission crud > modify permission info 1`] = `undefined`;

exports[`permission crud > modify permission info 2`] = `
{
  "comment": "after modify",
  "id": "test_permission",
}
`;
